Fix Carousel Wrap and WP Update

--- a/wp-content/themes/video-volunteers/style.less
+++ b/wp-content/themes/video-volunteers/style.less
@@ -3488,7 +3488,7 @@ body .content img { /* width: auto; */}
 		list-style: none;
 		position: absolute;
 		height: 200px;
-		width: 3000px;
+		width: 3120px;
 		li {
 			width: 380px;
 			height: 200px;
